--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,4 +3,4 @@
 
 
 0.0.2
-. Include splitta for sentence boundary detection
+. Include splitta for sentence boundary detection: https://github.com/lukeorland/splitta
