--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 0.0.1 
 . Loading Documents into database 
 . Multilabel and Multiclass classification evaluation: http://scikit-learn.org/dev/modules/multiclass.html
+. Use autopip8 for code formatting 
+. Stick to naming convention of modules, classes and variables 
 
 
 0.0.2
