--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,3 +15,4 @@
 
 0.0.4
 . http://stackoverflow.com/questions/4470523/git-create-a-branch-from-another-branch
+. Was not able to use gpu efficiently, memory cleaning issues
